--- a/.github/workflows/pythonApp.yml
+++ b/.github/workflows/pythonApp.yml
@@ -24,6 +24,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           pip install pylint
+          brew install graph-tool
 
       # Run pylint 
       - name: Analysing the code with pylint
