--- a/.github/workflows/pythonApp.yml
+++ b/.github/workflows/pythonApp.yml
@@ -4,7 +4,7 @@ on: [push]
 
 jobs:
   pylint:
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
 
     # steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -24,8 +24,8 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           pip install pylint
-          sudo apt-get update
-          sudo apt-get install python3-graph-tool
+          brew update
+          brew install graph-tool
 
       # Run pylint 
       - name: Analysing the code with pylint
