--- a/.github/workflows/pythonApp.yml
+++ b/.github/workflows/pythonApp.yml
@@ -26,6 +26,7 @@ jobs:
           pip install pylint
           brew update
           brew install graph-tool
+          brew --prefix graph-tool
           python -c "import graph_tool"
 
       # Add path to graph-tool to PYTHONPATH
